force-app/main/default/objects/sked__Templated_Shift__c/sked__Templated_Shift__c.object-meta.xml
<CustomObject>
    <label>Templated Shift</label>
    <nameField>
        <displayFormat>TSH-{0000}</displayFormat>
        <label>Templated Shift Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Templated Shifts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>