force-app/main/default/objects/sked__Templated_Shift__c/fields/sked__Display_Name__c.field-meta.xml
<CustomField>
    <fullName>sked__Display_Name__c</fullName>
    <label>Display Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>