force-app/main/default/objects/sked__Templated_Shift__c/fields/sked__Duration__c.field-meta.xml
<CustomField>
    <fullName>sked__Duration__c</fullName>
    <label>Duration</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>