force-app/main/default/objects/sked__Templated_Shift__c/fields/sked__Region__c.field-meta.xml
<CustomField>
    <fullName>sked__Region__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Region</label>
    <referenceTo>sked__Region__c</referenceTo>
    <relationshipLabel>Templated Shifts</relationshipLabel>
    <relationshipName>Templated_Shifts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>