force-app/main/default/objects/sked__Templated_Shift__c/fields/sked__Schedule_Template__c.field-meta.xml
<CustomField>
    <fullName>sked__Schedule_Template__c</fullName>
    <label>Schedule Template</label>
    <referenceTo>sked__Schedule_Template__c</referenceTo>
    <relationshipLabel>Templated Shifts</relationshipLabel>
    <relationshipName>Templated_Shifts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>