force-app/main/default/objects/sked__Templated_Shift__c/fields/sked__Start_Offset_Days__c.field-meta.xml
<CustomField>
    <fullName>sked__Start_Offset_Days__c</fullName>
    <label>Start Offset Days</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>