force-app/main/default/objects/sked__Templated_Shift__c/fields/sked_MigrationID__c.field-meta.xml
<CustomField>
    <fullName>sked_MigrationID__c</fullName>
    <externalId>true</externalId>
    <label>MigrationID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>